Metrics - Add option to save layout
Metrics tab now supports option to save the current layout.
Performance Summary tab is now implemented in the same way - saving to the database and supporting multiple views.

--- a/DBADashGUI/Properties/Settings.settings
+++ b/DBADashGUI/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="RunningQueriesSummaryMaxRows" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">3000</Value>
     </Setting>
+    <Setting Name="PerformanceSummaryMigrated" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
