--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -31,7 +31,11 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 6.0.101
+          dotnet-version: 6.0.x
+          dotnet-quality: 'ga'
+      
+      - name: Check SDK version
+        run: dotnet --list-sdks
 
       - name: Build
         run: dotnet build -c CLI
