Running Queries - Find Plan
Show a script that will find the plan for a query where the query plan isn't available in the repository database.  Use plan cache and query store.
#520

--- a/DBADashGUI/DBADashGUI.csproj
+++ b/DBADashGUI/DBADashGUI.csproj
@@ -32,6 +32,9 @@
     <Deterministic>False</Deterministic>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="SQL\FindPlan.sql" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="..\GlobalAssemblyInfo.cs" Link="Properties\GlobalAssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -213,6 +216,7 @@
     </Compile>
     <EmbeddedResource Include="Resources\PowerShell-Mode.xshd" />
     <EmbeddedResource Include="Resources\SQL-Mode.xshd" />
+    <EmbeddedResource Include="SQL\FindPlan.sql" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="DatabaseUnknown_16x.ico" />
