Update query timeouts
For queries without a specific timeout:
Increase the timeouts for the hourly collections to 2min and the daily collections to 5min.  This will compensate for removing query timeouts from the retry policy.
#581

--- a/DBADash/commandTimeouts.json.example
+++ b/DBADash/commandTimeouts.json.example
@@ -4,7 +4,40 @@
     "DatabasePrincipals": 900,
     "DatabaseRoleMembers": 900,
     "IdentityColumns": 900,
-    "SlowQueries": 90
+    "SlowQueries": 90,
+    "ServerProperties": 120,
+    "Databases": 120,
+    "SysConfig": 120,
+    "Drives": 120,
+    "DBFiles": 120,
+    "Backups": 120,
+    "LogRestores": 120,
+    "ServerExtraProperties": 120,
+    "DBConfig": 120,
+    "Corruption": 120,
+    "OSInfo": 120,
+    "TraceFlags": 120,
+    "DBTuningOptions": 120,
+    "AzureDBServiceObjectives": 120,
+    "LastGoodCheckDB": 120,
+    "Alerts": 120,
+    "CustomChecks": 120,
+    "DatabaseMirroring": 120,
+    "Jobs": 120,
+    "AzureDBResourceGovernance": 120,
+    "SchemaSnapshot": 300,
+    "ServerPrincipals": 300,
+    "ServerRoleMembers": 300,
+    "ServerPermissions": 300,
+    "VLF": 300,
+    "DriversWMI": 300,
+    "OSLoadedModules": 300,
+    "ResourceGovernorConfiguration": 300,
+    "DatabaseQueryStoreOptions": 300,
+    "DatabasesHADR": 120,
+    "AvailabilityGroups": 120,
+    "AvailabilityReplicas": 120,
+    "MemoryUsage": 120
   },
   "DefaultCommandTimeout": 60
 }
