Add Build Reference to SQL Patching
Check the latest builds available and highlight how many CUs/SPs we are behind the current build.  Highlight when support ends.  Configurable thresholds.
Build reference viewer.
Build reference provided by dbatools.

--- a/.github/workflows/ci_FolderDestination.yml
+++ b/.github/workflows/ci_FolderDestination.yml
@@ -48,6 +48,12 @@ jobs:
           $version.ToString(3)
           Write-Output "BUILD_NUMBER=$($version.ToString(3))" >> $env:GITHUB_OUTPUT
 
+      - name: Get Build Reference
+        id: GetBuildReference
+        shell: powershell
+        run: | 
+                Invoke-WebRequest -Uri 'https://dataplat.github.io/assets/dbatools-buildref-index.json' -OutFile 'DBADashBuild\CLI\BuildReference.json'
+
       - name: Zip
         shell: powershell
         run: | 
