--- a/DBADash/DBADash.csproj
+++ b/DBADash/DBADash.csproj
@@ -94,8 +94,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="AWSSDK.Core" Version="3.7.303.29" />
-    <PackageReference Include="AWSSDK.S3" Version="3.7.307.31" />
+    <PackageReference Include="AWSSDK.Core" Version="3.7.304.1" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.308" />
+    <PackageReference Include="AWSSDK.SQS" Version="3.7.301.4" />
     <PackageReference Include="Azure.Core" Version="1.39.0" />
     <PackageReference Include="Azure.Identity" Version="1.11.3" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="8.0.0" />
