Fix issue installing Pester
Fix error:
 Authenticode issuer 'CN=Jakub Jareš, O=Jakub Jareš, L=Praha, C=CZ' of the new
module 'Pester' with version '5.6.0' from root certificate authority 'CN=DigiCert Trusted Root G4,
OU=www.digicert.com, O=DigiCert Inc, C=US' is not matching with the authenticode issuer 'CN=Jakub Jareš, O=Jakub
Jareš, L=Praha, C=CZ' of the previously-installed module 'Pester' with version '5.5.0' from root certificate authority
'CN=DigiCert Assured ID Root CA, OU=www.digicert.com, O=DigiCert Inc, C=US'. If you still want to install or update,
use -SkipPublisherCheck parameter.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,7 +126,7 @@ jobs:
       - name: Run Pester Tests
         shell: powershell
         run: |     
-          Install-Module Pester -Force
+          Install-Module Pester -Force -SkipPublisherCheck
           Import-Module Pester -PassThru
           Invoke-Pester -Output Detailed Scripts\CI_Workflow.Tests.ps1
 
