--- a/.github/workflows/ci_FolderDestination.yml
+++ b/.github/workflows/ci_FolderDestination.yml
@@ -184,7 +184,7 @@ jobs:
       - name: Run Pester Tests FromFolder
         shell: powershell
         run: |     
-          Install-Module Pester -Force
+          Install-Module Pester -Force -SkipPublisherCheck
           Import-Module Pester -PassThru
           $container = New-PesterContainer -Path 'Scripts\CI_Workflow.Tests.ps1' -Data @{ Database = "DBADashDB_FromFolder" }
           Invoke-Pester -Container $container -Output Detailed
