--- a/.github/workflows/ci_MininalPermissions.yml
+++ b/.github/workflows/ci_MininalPermissions.yml
@@ -142,7 +142,7 @@ jobs:
       - name: Run Pester Tests
         shell: powershell
         run: |     
-          Install-Module Pester -Force
+          Install-Module Pester -Force -SkipPublisherCheck
           Import-Module Pester -PassThru
           $NoWMI=$true
           Invoke-Pester -Output Detailed Scripts\CI_Workflow.Tests.ps1
