--- a/DBADash/DBADash.csproj
+++ b/DBADash/DBADash.csproj
@@ -22,6 +22,7 @@
     <None Remove="SQL\SQLIdentityColumns.sql" />
     <None Remove="SQL\SQLJobs.sql" />
     <None Remove="SQL\SQLJobSteps.sql" />
+    <None Remove="SQL\SQLQueryStoreTopQueries.sql" />
     <None Remove="SQL\SQLRunningJobs.sql" />
     <None Remove="SQL\SQLTableSize.sql" />
   </ItemGroup>
@@ -69,6 +70,7 @@
 	<EmbeddedResource Include="SQL\SQLOSInfo.sql" />
 	<EmbeddedResource Include="SQL\SQLOSLoadedModules.sql" />
 	<EmbeddedResource Include="SQL\SQLPerformanceCounters.sql" />
+	<EmbeddedResource Include="SQL\SQLQueryStoreTopQueries.sql" />
 	<EmbeddedResource Include="SQL\SQLRemoveEventSessions.sql" />
 	<EmbeddedResource Include="SQL\SQLRemoveEventSessionsAzure.sql" />
 	<EmbeddedResource Include="SQL\SQLRunningJobs.sql" />
