Add support for custom external diff tool

--- a/DBADashGUI/Properties/Settings.settings
+++ b/DBADashGUI/Properties/Settings.settings
@@ -17,5 +17,11 @@
     <Setting Name="PerformanceSummaryMigrated" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="DiffToolBinaryPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="DiffToolArguments" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
